--- a/components/Links.module.css
+++ b/components/Links.module.css
@@ -1,6 +1,6 @@
 .grid {
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
   flex-wrap: wrap;
   max-width: 800px;
